--- a/language/en-GB/en-GB.plg_fields_clickablecontactfields.ini
+++ b/language/en-GB/en-GB.plg_fields_clickablecontactfields.ini
@@ -1,5 +1,5 @@
 PLG_FIELDS_CLICKABLECONTACTFIELDS="Clickable user contact fields"
-PLG_FIELDS_CLICKABLECONTACTFIELDS_DESC="Makes certain fields in a user profile clickable."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_DESC="Makes contact fields in a user profile clickable."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_PHONE_LABEL="Phone Field Names"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_PHONE_DESC="Comma-separated list of custom field names that should be rendered as 'tel:' links."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_SMS_LABEL="SMS Field Names"
