--- a/language/de-DE/de-DE.plg_fields_clickablecontactfields.sys.ini
+++ b/language/de-DE/de-DE.plg_fields_clickablecontactfields.sys.ini
@@ -1,5 +1,5 @@
 PLG_FIELDS_CLICKABLECONTACTFIELDS="Anklickbare Benutzerkontaktfelder"
-PLG_FIELDS_CLICKABLECONTACTFIELDS_DESC="Macht bestimmte Felder im Benutzerprofil anklickbar."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_DESC="Macht Kontaktfelder im Benutzerprofil anklickbar."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_PHONE_LABEL="Phone Feldnamen"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_PHONE_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als 'tel:' Link dargestellt werden soll."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_SMS_LABEL="SMS Feldnamen"
