Updated to version 1.0.8, added support for Viber and Facebook fields

--- a/language/de-DE/de-DE.plg_fields_clickablecontactfields.ini
+++ b/language/de-DE/de-DE.plg_fields_clickablecontactfields.ini
@@ -10,3 +10,7 @@ PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_TELEGRAM_LABEL="Telegram Feldnamen"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_TELEGRAM_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als 't.me' Link dargestellt werden soll."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_SIGNAL_LABEL="Signal Feldnamen"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_SIGNAL_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als 'signal.me' Link dargestellt werden soll."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_LABEL="Viber Feldnamen"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als 'viber:' Link dargestellt werden soll."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_LABEL="Facebook Feldnamen"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als Facebook Link dargestellt werden soll."
