--- a/language/en-GB/en-GB.plg_fields_clickablecontactfields.sys.ini
+++ b/language/en-GB/en-GB.plg_fields_clickablecontactfields.sys.ini
@@ -10,3 +10,7 @@ PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_TELEGRAM_LABEL="Telegram Field Names"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_TELEGRAM_DESC="Comma-separated list of custom field names that should be rendered as 't.me' links."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_SIGNAL_LABEL="Signal Field Names"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_SIGNAL_DESC="Comma-separated list of custom field names that should be rendered as 'signal.me' links."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_LABEL="Viber Field Names"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_DESC="Comma-separated list of custom field names that should be rendered as 'viber:' links."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_LABEL="Facebook Field Names"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_DESC="Comma-separated list of custom field names that should be rendered as Facebook links."
