Updated to version 1.0.10, added support for Discord and Instagram, some bugfixes

--- a/language/de-DE/de-DE.plg_fields_clickablecontactfields.ini
+++ b/language/de-DE/de-DE.plg_fields_clickablecontactfields.ini
@@ -14,3 +14,7 @@ PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_LABEL="Viber Feldnamen"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als 'viber:' Link dargestellt werden soll."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_LABEL="Facebook Feldnamen"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als Facebook Link dargestellt werden soll."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_DISCORD_LABEL="Discord Feldnamen"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_DISCORD_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als 'discord:' Link dargestellt werden soll."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_INSTAGRAM_LABEL="Instagram Feldnamen"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_INSTAGRAM_DESC="Komma-separierte Liste mit Feldnamen deren Inhalt als Instagram Link dargestellt werden soll."
