--- a/language/en-GB/en-GB.plg_fields_clickablecontactfields.ini
+++ b/language/en-GB/en-GB.plg_fields_clickablecontactfields.ini
@@ -14,3 +14,7 @@ PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_LABEL="Viber Field Names"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_VIBER_DESC="Comma-separated list of custom field names that should be rendered as 'viber:' links."
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_LABEL="Facebook Field Names"
 PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_FACEBOOK_DESC="Comma-separated list of custom field names that should be rendered as Facebook links."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_DISCORD_LABEL="Discord Field Names"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_DISCORD_DESC="Comma-separated list of custom field names that should be rendered as 'discord:' links."
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_INSTAGRAM_LABEL="Instagram Field Names"
+PLG_FIELDS_CLICKABLECONTACTFIELDS_FIELD_INSTAGRAM_DESC="Comma-separated list of custom field names that should be rendered as Instagram links."
